Fixed content alignment.

--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
 h1 {
 	font-size: 3em;
 	letter-spacing: .25em;
-	padding-bottom: 2em;
-	padding-top: 1em;
+	padding-top: 3em;
+	padding-bottom: .5em;
 	color: #FFF;
 	text-transform: uppercase;
 }
@@ -28,16 +28,13 @@ h2 {
 	color: #FFF;
 	letter-spacing: .25em;
 	line-height: 2em;
-	top: 25%;
-	transform: translateY(25%);
 }
 
 h3 {
 	letter-spacing: .25em;
 	line-height: 2em;
-	padding-top: 1em;
-	top: 25%;
-	transform: translateY(25%);
+	padding-top: 2em;
+	text-transform: uppercase;
 }
 
 h3 a {
@@ -54,13 +51,13 @@ header {
 	background-attachment: fixed;
 	background-position: center center;
 	background-size: cover;
-	text-transform: uppercase;
+
 }
 
 header h1 {
 	font-size: 3em;
 	color: #FFF;
-	padding-top: 1em;
+	padding-top: 3em;
 }
 
 header h2, header h3 {
@@ -68,20 +65,13 @@ header h2, header h3 {
 	line-height: 2em;
 }
 
-header h1, header h2, header h3 {
-	position: relative;
-	top: 25%;
-	transform: translateY(25%);
-}
-
 header h3 {
-	padding-top: 2em;
+	padding-top: 1em;
 }
 
 header h3 a {
 	color: #FFF;
 	text-decoration: none;
-	padding: 1em 2em;
 	background-color: #f15a22;
 	border-radius: 25px;
 }
@@ -122,7 +112,7 @@ header ul li a:hover {
 }
 
 .dropdown {
-	display: inline-block;
+	display: block;
 	position: relative;
 }
 
@@ -184,7 +174,7 @@ header ul li a:hover {
 .navbar {
 	background-color: #95a5a6;
 	font-size: 1.25em;
-	height: 25px;
+	height: 1.25em;
 	list-style-type: none;
 	padding: 15px;
 	position: fixed;
@@ -192,6 +182,7 @@ header ul li a:hover {
 	left: 0;
 	width: 100%;
 	z-index: 9999;
+	text-transform: uppercase;
 }
 
 .navbar a {
